--- a/Practica_04-v1/Practica_04-v1.ipynb
+++ b/Practica_04-v1/Practica_04-v1.ipynb
@@ -5977,6 +5977,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 180˚ ambiguedad\n",
+    "La polarizazión de la **onda P** da como resultado dos posibles direcciones de las cuales pudo haber provenido el sismo. Para resolver este problema es necesario analizar la polaridad del primer arribo de la onda P, en la componente vertical. Si la polaridad de la componente vertical es hacia arriba, significa que el vector de deslazamiento apunta en el sentido opuesto a la dirección de la fuente. Por el Contrario, si es hacia abajo, significa que el vector de desplazamiento apunta hacia la fuente. <br>\n",
+    "Pro ejemplo, vamos a asumir que después de analizar el movimiento de la partícula, sabemos que la dirección de la cual pudo provenir el sismo es NE/SW. En este punto, sabemos que el sismo vino de la dirección NE o SW, pero no sabemos cual.  Para resolverlo necesitamos observar detenidamente a la polaridad de la llegada de la primeras fases horizontales. Pueden ser que las dos sean positivas o las dos negativas. Supongamos que en este caso las dos son positivas, es decir el primer arribo apunta en la dirección NE. Debido a la ruptura del sismo puede ser ya sea compresión o dilatación. Si suponemos que todas las componentes son positivas, en este caso selecionariamos la dirección SW. \n",
+    "Analiza tus diagramas y su lo consideras necesario añade 180 grados a la variable bearing_STA, utilizando las variables **disamb_1**, **disamb_2** y **disamb_3**. Es decir, asigna el valor 0 o 180 según consideres conveniente. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
@@ -6783,10 +6793,10 @@
    ],
    "source": [
     "plot_map_mexico()\n",
-    "\n",
-    "disamb_1 = 180\n",
-    "disamb_2 = 0\n",
-    "disamb_3 = 0\n",
+    "# Escribe tu código aqui ~3 líneas\n",
+    "disamb_1 = None\n",
+    "disamb_2 = None\n",
+    "disamb_3 = None\n",
     "\n",
     "CJIG_sta = geopy.Point(CJIG_lat, CJIG_lon)\n",
     "MAIG_sta = geopy.Point(MAIG_lat, MAIG_lon)\n",
