--- a/Practica_04-v1/Practica_04-v1.ipynb
+++ b/Practica_04-v1/Practica_04-v1.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mision\n",
+    "# Misión\n",
     "En esta prácticamos vamos a localizar un sismo ocurrido en el Golfo de California. Utilizando el método de polarización de onda. Teoricamente, es posible licalizar un sismo utilizando una estación y sus tres componentes. \n",
     "# Parte 1\n",
     "El Servicio Sismológico Nacional cuenta con una red de estaciones que permiten el monitoreo en tiempo real de los sismos que ocurren en el pais. El 5 de mayo del 2020, reportaron un sismo de magnitud M6.2, ocurrido al sur del Golfo de California. En está práctica vamos a analizar los registros sísmicos de 3 estaciones ubicadas en: (1) Chamela, Jalísco, (2) Mazatlán, Sinaloa y (3) en La Paz, Baja California Sur. Los códigos de estación de estos sensores es **CJIG**, **MAIG**, **LPIG**. \n",
