--- a/Practica_05-v1/Practica_05-v1.ipynb
+++ b/Practica_05-v1/Practica_05-v1.ipynb
@@ -126,8 +126,8 @@
     "PTCN_N  = waveforms.select(station=Station_name, location=Location_sta,channel='BH1')\n",
     "PTCN_E  = waveforms.select(station=Station_name, location=Location_sta,channel='BH2')\n",
     "PTCN_Z  = waveforms.select(station=Station_name, location=Location_sta,channel='BHZ')\n",
-    "print('Station:', PTCN_N[0].stats.sac.kstnm, 'Azimuth: ', PTCN_N[0].stats.sac.cmpaz, 'N')\n",
-    "print('Station:', PTCN_E[0].stats.sac.kstnm, 'Azimuth: ', PTCN_E[0].stats.sac.cmpaz, 'N')\n",
+    "print('Station:', PTCN_N[0].stats.sac.kstnm, ' Channel:', PTCN_N[0].stats.sac.kcmpnm, 'Azimuth: ', PTCN_N[0].stats.sac.cmpaz, 'N')\n",
+    "print('Station:', PTCN_E[0].stats.sac.kstnm, ' Channel:', PTCN_N[0].stats.sac.kcmpnm, 'Azimuth: ', PTCN_E[0].stats.sac.cmpaz, 'N')\n",
     "print('Latitud     del sismo: ', PTCN_N[0].stats.sac.evla)\n",
     "print('Longitud    del sismo: ', PTCN_N[0].stats.sac.evlo)\n",
     "print('Profundidad del sismo: ', PTCN_N[0].stats.sac.evdp)\n",
