typo fixed in Practica 10

--- a/Practica_10-v1/Practica_10-v1.ipynb
+++ b/Practica_10-v1/Practica_10-v1.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "# Misión\n",
-    "En está práctica tendrás que elaborar un mapa donde indique los mecanismos focales de un sismos y de sus réplicas principales. \n",
+    "En esta práctica tendrás que elaborar un mapa donde indique los mecanismos focales de un sismos y de sus réplicas principales. \n",
     "# Introducción\n",
     "<img style=\"float: right; width: 320px\" src=\"focal.png\"/> \n",
     "Los **mecanismos focales** nos permiten representar gráficamente cuales son las caracterísiticas geométricas de un sismo. Los mecanismos focales se pueden definir a partir de conocer los siguientes parámetros:\n",
@@ -623,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
