--- a/Practica_01-v1/Practica_01-v2.ipynb
+++ b/Practica_01-v1/Practica_01-v2.ipynb
@@ -57,7 +57,7 @@
     "\\end{equation}\n",
     "$$\n",
     "Donde $\\omega=2\\pi f$, $i=\\sqrt{-1}$ y $2\\epsilon=D/m$. $m$ corresponde a la masa y $D$ es la constante de amortiguación. Para reproducir está figura vamos a definir la constante $h=\\epsilon/\\omega_0$, cuando $h=1$ ($\\epsilon=\\omega_0$).\n",
-    "<img style=\"float: center\" src=\"instrumento.png\"/> \n",
+    "<img style=\"float: center\" src=\"Instrumento.png\"/> \n",
     "\n",
     "## Pasos:\n",
     "0. Creo una lista con los valores de $h$ para los cuales deseamos obtener la gráfica (h=(1/4,1/2,1,2,4))\n",
