--- a/Practica_01-v1/Practica_01-v2.ipynb
+++ b/Practica_01-v1/Practica_01-v2.ipynb
@@ -57,8 +57,8 @@
     "\\end{equation}\n",
     "$$\n",
     "Donde $\\omega=2\\pi f$, $i=\\sqrt{-1}$ y $2\\epsilon=D/m$. $m$ corresponde a la masa y $D$ es la constante de amortiguación. Para reproducir está figura vamos a definir la constante $h=\\epsilon/\\omega_0$, cuando $h=1$ ($\\epsilon=\\omega_0$).\n",
-    "<img style=\"float: center\" src=\"Instrumento.png\"/> \n",
     "\n",
+    "![title](./instrumento.png)\n",
     "## Pasos:\n",
     "0. Creo una lista con los valores de $h$ para los cuales deseamos obtener la gráfica (h=(1/4,1/2,1,2,4))\n",
     "1. Crea un vector de frecuencia en un rango similar al mostrado en la figura, en este caso las frecuencias vam de 0.01 a 10Hz. **Nota:** La gráfica está en escala logaritmica en $X$.  <br>\n",
@@ -243,7 +243,7 @@
     "%matplotlib inline\n",
     "pre_filt = [0.01, 0.05, 8, 10]\n",
     "inv = obspy.read_inventory('./OXIG.RESP')\n",
-    "sismo.remove_response(inventory=inv, output=\"VEL\",zero_mean=True, plot=True, taper=True)"
+    "sismo.remove_response(inventory=inv, output=\"DISP\",zero_mean=True, plot=True, taper=True)"
    ]
   },
   {
