Error in Practica_01 fixed.

--- a/Practica_01-v1/Practica_01-v2.ipynb
+++ b/Practica_01-v1/Practica_01-v2.ipynb
@@ -111,7 +111,7 @@
     "* **Fase**\n",
     "$$\n",
     "\\begin{equation}\n",
-    "\\angle H(\\omega )=\\arctan{\\frac{\\text{imag}\\{{H(\\omega )\\}^2}}{\\text{real}\\{{H(\\omega )\\}^2}} }\n",
+    "\\angle H(\\omega )=\\arctan{\\frac{\\text{imag}\\{{H(\\omega )\\}}}{\\text{real}\\{{H(\\omega )\\}}} }\n",
     "\\end{equation}\n",
     "$$\n",
     "**Tip1:** En este paso puedes calcular la amplitud y la fase utilizando estas ecuaciones o puedes utilizar funciones de numpy como <a href=\"https://numpy.org/doc/stable/reference/generated/numpy.angle.html\">**numpy.angle**</a> y <a href=\"https://numpy.org/doc/stable/reference/generated/numpy.absolute.html\">**numpy.abs**</a>. <br>\n",
