Error in Practica_03 fixed.

--- a/Practica_03-v2/Practica_03-v2.ipynb
+++ b/Practica_03-v2/Practica_03-v2.ipynb
@@ -182,7 +182,7 @@
     "$$<br>\n",
     "$\\tau$ es la duración del pulso de la fuente. \n",
     "# Pasos\n",
-    "1. Inicializa tus parámetros: Número de modos a sumar (40), velocidad del medio (3km/s), posición de la fuente $x_s=8\\,m$, discretización del medio ($dx=0.05m$), intervalo de tiempo ($dt=0.05\\, s$), tiempo ($t=1.5\\,s$) y duración del pulso($\\tau=0.5$).\n",
+    "1. Inicializa tus parámetros: Número de modos a sumar (40), velocidad del medio (3m/s), posición de la fuente $x_s=8\\,m$, discretización del medio ($dx=0.05m$), intervalo de tiempo ($dt=0.05\\, s$), tiempo ($t=1.5\\,s$) y duración del pulso($\\tau=0.5$).\n",
     "2. Define las funciones $A_n$, $F(\\omega_n)$ y $u(x,t)$\n",
     "\n"
    ]
