--- a/Practica_05-v1/Practica_05-v1.ipynb
+++ b/Practica_05-v1/Practica_05-v1.ipynb
@@ -295,8 +295,6 @@
    "source": [
     "# Escribe tu código aquí. ~1 línea\n",
     "Fases    = None \n",
-    "arrivals = model.get_ray_paths(source_depth_in_km=depth, distance_in_degree=gcarc, phase_list=[\"ttbasic\"])\n",
-    "ax = arrivals.plot_rays()\n",
     "arrivals = model.get_ray_paths(source_depth_in_km=depth, distance_in_degree=gcarc, phase_list=Fases)\n",
     "ax = arrivals.plot_rays()\n"
    ]
@@ -308,7 +306,7 @@
    },
    "source": [
     "# Conclusiones\n",
-    "¿Cúantas fases pudiste identificar?"
+    "¿Cúantas fases pudiste identificar en **los sismogramas**? ¿en qué compnente es más fácil de visualizar?"
    ]
   },
   {
@@ -337,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
