--- a/Practica_06-v1/Practica_06-v1.ipynb
+++ b/Practica_06-v1/Practica_06-v1.ipynb
@@ -269,11 +269,11 @@
     "    \n",
     "    2. Investiga la influencia de los parámetros del modelo (en la celda \"Data y modelos\"):\n",
     "            * Cambia las incertidumbres de los datos. \n",
-    "            * ¿cómo afectan los outliers tus resultados? (incertidumbre alta para una de las observaciones)\n",
-    "            * ¿qué pasa si agregas más estaciones en superficie?\n",
-    "            * ¿Que pasa si todas las estaciones están en un sólo lado?\n",
-    "            * ¿cómo puedes mejorar la incertidumbre en la profundidad?\n",
-    "            * ¿que consecuencia tiene cambiar los incrementos en el espacio de soluciones?\n",
+    "            * ¿Cómo afectan los outliers tus resultados? (incertidumbre alta para una de las observaciones)\n",
+    "            * ¿Qué pasa si agregas más estaciones en superficie?\n",
+    "            * ¿Qué pasa si todas las estaciones están en un sólo lado?\n",
+    "            * ¿Cómo puedes mejorar la incertidumbre en la profundidad?\n",
+    "            * ¿Que consecuencia tiene cambiar los incrementos en el espacio de soluciones?\n",
     "            \n",
     "**Crea un archivo por separado y resuelve estas preguntas anexa tus gráficas que obtienes para cada pregunta**"
    ]
