--- a/Practica_05_Exploracion/Practica_05.ipynb
+++ b/Practica_05_Exploracion/Practica_05.ipynb
@@ -138,8 +138,8 @@
     "yi = np.linspace(Y.min(), Y.max(), N)\n",
     "\n",
     "xg, yg = np.meshgrid(xi, yi)\n",
-    "di     = griddata((X,Y), I, (xg, yg), method='cubic')\n",
-    "ii     = griddata((X,Y), D, (xg, yg), method='cubic')\n",
+    "di     = griddata((X,Y), D, (xg, yg), method='cubic')\n",
+    "ii     = griddata((X,Y), I, (xg, yg), method='cubic')\n",
     "fi     = griddata((X,Y), F, (xg, yg), method='cubic')\n",
     "\n",
     "\n",
